# inp_visual

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  regen.cmd
assets/: CMakeLists.txt  assets.qrc
assets/styles/: main.qss
cmake/: VTKInit.cmake  cotire.cmake
depends/: CMakeLists.txt
depends/vtk/: CMakeLists.txt
share/: CMakeLists.txt  config.ini  en_US.ts  zh_CN.ts
source/: CMakeLists.txt
source/executable/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  runtime.cpp  runtime.h  settings.cpp  settings.h
source/executable/api/: CMakeLists.txt
source/executable/model/: CMakeLists.txt  inpreader.cpp  inpreader.h  projectmodel.cpp  projectmodel.h
source/executable/widgets/: CMakeLists.txt  configwidget.cpp  configwidget.h  inpreader.cpp  inpreader.h  pickinteractorstyle.cpp  pickinteractorstyle.h  vtkwidget.cpp  vtkwidget.h
source/executable/widgets/config/: CMakeLists.txt  boundaryconditionswidget.cpp  boundaryconditionswidget.h  controlparameterswidget.cpp  controlparameterswidget.h  dfnwidget.cpp  dfnwidget.h  elementpropertieswidget.cpp  elementpropertieswidget.h  inputdelegate.cpp  inputdelegate.h  jointpropertieswidget.cpp  jointpropertieswidget.h  unitwidget.cpp  unitwidget.h
source/executable/widgets/vtk/: CMakeLists.txt  pickinteractorstyle.cpp
source/utils/: CMakeLists.txt  formatter.h  logging.cpp  logging.h  pathutil.cpp  pathutil.h  vtksignal.h
